\name{boral}
\title{News for package 'boral'}
\encoding{UTF-8}

\section{CHANGES IN boral VERSION 1.0}{
This list below is written in terms of what is deemed to be most important to least important changes =D
  \itemize{
	\item In the main \code{boral} function, the \code{trait} argument should now be a matrix which does NOT include an intercept column. This makes it now consistent with the \code{X} argument. An if statement has been created within the main function to check this.

	\item In the main \code{boral} function, the arguments \code{hypparams} and \code{ssvs.index} are now nested under a new argument called \code{prior.control}, which is a list argument. This argument also includes an element called \code{type}, which allows for different prior distributions, as discussed in the next point.

	\item A new function \code{coefsplot} has been created, which can be used to construct horizontal line or "caterpillar plots" for column-specific regression coefficients corresponding to covariates \code{X} (if applicable). These plots consist of a symbol marking a point estimate (posterior median by default), and a line based on the limits of the HPD intervals. 

	\item Both the \code{lvsplot} and \code{plot.boral} functions no longer have an argument for \code{a}. Instead, all graphical options are now controlled externally and/or through the \code{...} argument.

	\item As requested by several users, the range of prior distributions has been expanded, slightly. Specifically, there is now a \code{type} argument nested, within the \code{prior.control} list argument, that requires a vector of four elements. These four elements are closely related to the four respective elements in \code{prior.control$hypparams}. By default, \code{prior.control$type = c("normal","normal","normal","uniform")}, which coincides with the priors used in all version of boral up until now. 	